major perf improvements 100x faster at least due to removal of Jsoup.connect().get()